# ohmimetro

./: .gitignore  CMakeLists.txt  README.md  diagram.json  numeros.h  ohmimetro.c  ohmimetro.h
lib/: vetores.h
